# LxEngine

./: CMakeLists.txt  LICENSE  README.md  copy_libraries.sh
include/glad/: glad.h
include/libvmf/: vmf.hpp
lib/: libvmf.lib
lib/cglm/win/: cglm-test.vcxproj  cglm-test.vcxproj.filters  cglm.vcxproj  cglm.vcxproj.filters
lib/libplanegeom/: CMakeLists.txt  geom  map.vmf
lib/libplanegeom/include/libvmf/: vmf.hpp
lib/libplanegeom/src/: planegeom.hpp
lib/libvmf/: CMakeLists.txt  _map.vmf  map.vmf
lib/libvmf/src/: geom.cpp  geom.hpp  libvmf.cpp  libvmf.h  main.cpp  util.cpp  util.hpp  vmf.cpp  vmf.hpp
lib/libvmfgeom/: CMakeLists.txt  README.md  geom  map.vmf  planes
lib/libvmfgeom/src/: main.cpp
maps/: map.vmf  map.vmx
res/shaders/: base.fsh  base.vsh
sauce/: cameracontroller.cpp  dbg.h  fileutil.c  fileutil.h  lx.h  lxcamera.c  lxcamera.h  lxdbg.c  lxdbg.h  lxshader.c  lxshader.h  lxshader.hpp  lxvao.c  lxvao.h  lxwindow.c  lxwindow.h  main.c  main.cpp
src/: cameracontroller.cpp  lx.h  lx.hpp  lxcamera.cpp  lxcamera.hpp  lxdbg.cpp  lxdbg.hpp  lxinputmanager.c  lxinputmanager.h  lxshader.cpp  lxshader.hpp  lxvao.c  lxvao.cpp  lxvao.h  lxvao.hpp  lxwindow.c  lxwindow.cpp  lxwindow.hpp  main.cpp
src/core/: LxCamera.cpp  LxCamera.hpp  LxVao.cpp  LxVao.hpp  LxWindow.cpp  LxWindow.hpp
src/core/renderer/: BrushRenderer.cpp  BrushRenderer.hpp  LxRenderer.hpp
src/core/shader/: LxShader.cpp  LxShader.hpp
src/util/: fileutil.h  glad.c  lxdbg.hpp
